Crash canceling scale keyframes in dope sheet grease pencil #91219

Closed
opened 2021-09-06 15:27:07 +02:00 by Nanoek Knol · 12 comments
Member

System Information
Operating system: Linux-5.4.0-81-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: Mesa Intel(R) UHD Graphics (ICL GT1) Intel 4.6 (Core Profile) Mesa 21.0.3

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-06 10:54, hash: e2bbb5b07e
Worked: 2.93.4
Caused by b0d9e6797f

Short description of error
Hello, when I press S to scale keyframes from an grease pencil object in the dope sheet in grease pencil mode, then move my mouse a little and right click or press escape to cancel, blender crashes.

Exact steps for others to reproduce the error

  • Open up the included .blend file.
  • Hover over the dope sheet with your mouse
  • press {Key S} to scale the selected keyframes
  • {key RMB} or press escape to cancel the operation and blender crashes. If not try again.
    cancel_scale_keyframes_crash.blend
**System Information** Operating system: Linux-5.4.0-81-generic-x86_64-with-glibc2.31 64 Bits Graphics card: Mesa Intel(R) UHD Graphics (ICL GT1) Intel 4.6 (Core Profile) Mesa 21.0.3 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-06 10:54, hash: `e2bbb5b07e` Worked: 2.93.4 Caused by b0d9e6797f **Short description of error** Hello, when I press S to scale keyframes from an grease pencil object in the dope sheet in grease pencil mode, then move my mouse a little and right click or press escape to cancel, blender crashes. **Exact steps for others to reproduce the error** - Open up the included .blend file. - Hover over the dope sheet with your mouse - press {Key S} to scale the selected keyframes - {key RMB} or press escape to cancel the operation and blender crashes. If not try again. [cancel_scale_keyframes_crash.blend](https://archive.blender.org/developer/F10380778/cancel_scale_keyframes_crash.blend)
Author
Member

Added subscriber: @Blendey

Added subscriber: @Blendey

#91230 was marked as duplicate of this issue

#91230 was marked as duplicate of this issue
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm on master: 4ddad5a7ee5d9c3245593c509714f8c1359f9342

Finding the culprit...

Can confirm on master: `4ddad5a7ee5d9c3245593c509714f8c1359f9342` Finding the culprit...
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Member

Caused by b0d9e6797f

Hi @mano-wii , can you please check this? (Caused by your commit)

Caused by b0d9e6797f Hi @mano-wii , can you please check this? (Caused by your commit)
Member

Closed as duplicate of #91230

Closed as duplicate of #91230
Member

Changed status from 'Duplicate' to: 'Confirmed'

Changed status from 'Duplicate' to: 'Confirmed'
Member

Added subscribers: @HDMaster84, @antoniov

Added subscribers: @HDMaster84, @antoniov

This issue was referenced by 08acbdc1ff

This issue was referenced by 08acbdc1ff75607001f770b4281f53ec87449b7f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2021-09-07 16:04:48 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91219
No description provided.