Fix T91219: Crash canceling scale keyframes in dope sheet grease pencil

Caused by {rBb0d9e6797fb8}

Ideally `td->loc` should always be set and point to a 3d array.